var structsession_request_tuple =
[
    [ "actType", "structsession_request_tuple.html#aa87fa45f4ec6e68373af4bab9f81b47d", null ],
    [ "cacheTimeout", "structsession_request_tuple.html#a0d6f667f2d56156eb4fd9833633c142e", null ],
    [ "dstIP", "structsession_request_tuple.html#a67ebf9eae4bf9792fb6409e364a1f62e", null ],
    [ "dstIPV6", "structsession_request_tuple.html#a7207ea3c447e52c86a6b9802558cbfd5", null ],
    [ "dstPort", "structsession_request_tuple.html#a21caff6aed5ae7e91e219dae37410b8f", null ],
    [ "inlif", "structsession_request_tuple.html#abbbf331d8c3d0a947a630715a5407967", null ],
    [ "ipver", "structsession_request_tuple.html#a882c11139e4ea9d2670ca82c7a7663ea", null ],
    [ "nextHop", "structsession_request_tuple.html#a3c61e863c5d6c44891049c4d4a0d4d1e", null ],
    [ "nextHopV6", "structsession_request_tuple.html#abcefda612395b8009229ab750e7a83c1", null ],
    [ "outlif", "structsession_request_tuple.html#abba0a14885b15c3ffeb08ba1f8aaf4dd", null ],
    [ "proto", "structsession_request_tuple.html#a9ae225ca3b4e59ae106cfa668a17f2e0", null ],
    [ "sessId", "structsession_request_tuple.html#ae0163db044a7a49a1206153730ad8828", null ],
    [ "srcIP", "structsession_request_tuple.html#a0dbd8fd00c7338acb17c6ed0215fe5ca", null ],
    [ "srcIPV6", "structsession_request_tuple.html#a2600225c94da6dbbc1598838a86cdb40", null ],
    [ "srcPort", "structsession_request_tuple.html#ac258157cb7bc0d57fe6e72e6c6a738b5", null ]
];